--- a/Android/res/values-fr/strings.xml
+++ b/Android/res/values-fr/strings.xml
@@ -53,4 +53,8 @@
     <!-- EntretienAdapter -->
     <string name="adapter_entretien_item_date_to_use">A consommer dans</string>
     <string name="adapter_entretien_item_date_peremption">Périmé depuis</string>
+
+    <!-- PharmacieAdapter -->
+    <string name="adapter_pharmacie_item_date_to_use">A consommer dans</string>
+    <string name="adapter_pharmacie_item_date_peremption">Périmé depuis</string>
 </resources>
