--- a/Android/res/values-fr/strings.xml
+++ b/Android/res/values-fr/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Atlantis</string>
-    <string name="app_date_format">dd-MM-yyyy HH:mm:ss</string>
+    <string name="app_datetime_format">dd-MM-yyyy HH:mm:ss</string>
+    <string name="app_date_format">yyyy-MM-dd</string>
     <string name="app_last_connection">Dernière connexion le</string>
 
     <!-- MainFragmentActivity -->
