--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -294,4 +294,8 @@
     <!-- row_sensor_switch -->
     <string name="layout_row_sensor_switch_on">On</string>
     <string name="layout_row_sensor_switch_off">Off</string>
+
+    <!-- Widgets -->
+    <string name="widget_door_lock_label">Atlantis Door Lock</string>
+    <string name="widget_scenario_label">Atlantis Scenario</string>
 </resources>
